# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py
brain_games/scripts/: brain_even.py  brain_games.py
games_brain/: cli.py  config.py
games_brain/core/: engine.py  welcome.py
games_brain/games/: calc.py  even.py
games_brain/scripts/: brain_calc.py  brain_even.py  brain_games.py
games_brain/utils/: randomizer.py
