[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain Games"
authors = ["Smacktur <Smacktur@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "games_brain"},
]

[tool.poetry.scripts]
brain-games = "games_brain.scripts.brain_games:main"
brain-even = "games_brain.scripts.brain_even:main"


[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
